welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: not found: value t
  t=Array.fill(num)(0)
  ^golomb:3: error: not found: value t
  t(0)=1
  ^golomb:9: error: not found: value t
      t(i)=x
      ^golomb:17: error: not found: value t
  return(t(num))
         ^